python/pyili2c/parser/generated/grammars_antlr4/Interlis24Parser.py
# Generated from Interlis24Parser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Interlis24Parser ( Parser ):

    grammarFileName = "Interlis24Parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'INTERLIS'", "'MODEL'", "'TOPIC'", "'CLASS'", 
                     "'STRUCTURE'", "'DOMAIN'", "'FUNCTION'", "'CONSTRAINT'", 
                     "'MANDATORY'", "'ABSTRACT'", "'IMPORTS'", "'EXTENDS'", 
                     "'UNIQUE'", "'ASSOCIATION'", "'BAG'", "'DEPENDS'", 
                     "'ON'", "'EXTERNAL'", "'END'", "'AT'", "'VERSION'", 
                     "'='", "';'", "':'", "'.'", "'('", "')'", "','", "'['", 
                     "']'", "'..'", "'*'", "'OF'", "'LIST'", "'{'", "'}'", 
                     "'>'", "'--'" ]

    symbolicNames = [ "<INVALID>", "INTERLIS", "MODEL", "TOPIC", "CLASS", 
                      "STRUCTURE", "DOMAIN", "FUNCTION", "CONSTRAINT", "MANDATORY", 
                      "ABSTRACT", "IMPORTS", "EXTENDS", "UNIQUE", "ASSOCIATION", 
                      "BAG", "DEPENDS", "ON", "EXTERNAL", "END", "AT", "VERSION", 
                      "EQUALS", "SEMICOLON", "COLON", "DOT", "LPAREN", "RPAREN", 
                      "COMMA", "LSQUARE", "RSQUARE", "RANGE", "STAR", "OF", 
                      "LIST", "LBRACE", "RBRACE", "GT", "ASSOC_ARROW", "ID", 
                      "STRING", "NUMBER", "WS", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "ANY" ]

    RULE_iliFile = 0
    RULE_version = 1
    RULE_model = 2
    RULE_languageSpec = 3
    RULE_modelHeader = 4
    RULE_modelBody = 5
    RULE_statement = 6
    RULE_topic = 7
    RULE_topicBody = 8
    RULE_topicStatement = 9
    RULE_importsStmt = 10
    RULE_domainSection = 11
    RULE_domainStatement = 12
    RULE_domainType = 13
    RULE_enumerationType = 14
    RULE_enumItem = 15
    RULE_classDef = 16
    RULE_structureDef = 17
    RULE_classModifiers = 18
    RULE_classElement = 19
    RULE_uniqueDef = 20
    RULE_uniqueExprList = 21
    RULE_uniqueExpr = 22
    RULE_associationDef = 23
    RULE_associationElement = 24
    RULE_roleDef = 25
    RULE_roleModifier = 26
    RULE_roleCardinality = 27
    RULE_dependsStmt = 28
    RULE_functionDef = 29
    RULE_paramList = 30
    RULE_param = 31
    RULE_attrDef = 32
    RULE_mandatoryAttr = 33
    RULE_cardinality = 34
    RULE_typeRef = 35
    RULE_typeSuffix = 36
    RULE_numericRange = 37
    RULE_listCardinality = 38
    RULE_qualifiedName = 39
    RULE_identifier = 40
    RULE_constraintDef = 41
    RULE_constraintExpression = 42
    RULE_exprToken = 43

    ruleNames =  [ "iliFile", "version", "model", "languageSpec", "modelHeader", 
                   "modelBody", "statement", "topic", "topicBody", "topicStatement", 
                   "importsStmt", "domainSection", "domainStatement", "domainType", 
                   "enumerationType", "enumItem", "classDef", "structureDef", 
                   "classModifiers", "classElement", "uniqueDef", "uniqueExprList", 
                   "uniqueExpr", "associationDef", "associationElement", 
                   "roleDef", "roleModifier", "roleCardinality", "dependsStmt", 
                   "functionDef", "paramList", "param", "attrDef", "mandatoryAttr", 
                   "cardinality", "typeRef", "typeSuffix", "numericRange", 
                   "listCardinality", "qualifiedName", "identifier", "constraintDef", 
                   "constraintExpression", "exprToken" ]

    EOF = Token.EOF
    INTERLIS=1
    MODEL=2
    TOPIC=3
    CLASS=4
    STRUCTURE=5
    DOMAIN=6
    FUNCTION=7
    CONSTRAINT=8
    MANDATORY=9
    ABSTRACT=10
    IMPORTS=11
    EXTENDS=12
    UNIQUE=13
    ASSOCIATION=14
    BAG=15
    DEPENDS=16
    ON=17
    EXTERNAL=18
    END=19
    AT=20
    VERSION=21
    EQUALS=22
    SEMICOLON=23
    COLON=24
    DOT=25
    LPAREN=26
    RPAREN=27
    COMMA=28
    LSQUARE=29
    RSQUARE=30
    RANGE=31
    STAR=32
    OF=33
    LIST=34
    LBRACE=35
    RBRACE=36
    GT=37
    ASSOC_ARROW=38
    ID=39
    STRING=40
    NUMBER=41
    WS=42
    LINE_COMMENT=43
    BLOCK_COMMENT=44
    ANY=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class IliFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTERLIS(self):
            return self.getToken(Interlis24Parser.INTERLIS, 0)

        def version(self):
            return self.getTypedRuleContext(Interlis24Parser.VersionContext,0)


        def SEMICOLON(self):
            return self.getToken(Interlis24Parser.SEMICOLON, 0)

        def EOF(self):
            return self.getToken(Interlis24Parser.EOF, 0)

        def model(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Interlis24Parser.ModelContext)
            else:
                return self.getTypedRuleContext(Interlis24Parser.ModelContext,i)


        def getRuleIndex(self):
            return Interlis24Parser.RULE_iliFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIliFile" ):
                listener.enterIliFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIliFile" ):
                listener.exitIliFile(self)




    def iliFile(self):

        localctx = Interlis24Parser.IliFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_iliFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(Interlis24Parser.INTERLIS)
            self.state = 89
            self.version()
            self.state = 90
            self.match(Interlis24Parser.SEMICOLON)
            self.state = 92 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 91
                self.model()
                self.state = 94 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==2):
                    break

            self.state = 96
            self.match(Interlis24Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(Interlis24Parser.NUMBER)
            else:
                return self.getToken(Interlis24Parser.NUMBER, i)

        def DOT(self):
            return self.getToken(Interlis24Parser.DOT, 0)

        def getRuleIndex(self):
            return Interlis24Parser.RULE_version

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersion" ):
                listener.enterVersion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersion" ):
                listener.exitVersion(self)




    def version(self):

        localctx = Interlis24Parser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_version)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(Interlis24Parser.NUMBER)
            self.state = 99
            self.match(Interlis24Parser.DOT)
            self.state = 100
            self.match(Interlis24Parser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MODEL(self):
            return self.getToken(Interlis24Parser.MODEL, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(Interlis24Parser.ID)
            else:
                return self.getToken(Interlis24Parser.ID, i)

        def EQUALS(self):
            return self.getToken(Interlis24Parser.EQUALS, 0)

        def modelBody(self):
            return self.getTypedRuleContext(Interlis24Parser.ModelBodyContext,0)


        def END(self):
            return self.getToken(Interlis24Parser.END, 0)

        def DOT(self):
            return self.getToken(Interlis24Parser.DOT, 0)

        def languageSpec(self):
            return self.getTypedRuleContext(Interlis24Parser.LanguageSpecContext,0)


        def modelHeader(self):
            return self.getTypedRuleContext(Interlis24Parser.ModelHeaderContext,0)


        def getRuleIndex(self):
            return Interlis24Parser.RULE_model

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModel" ):
                listener.enterModel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModel" ):
                listener.exitModel(self)




    def model(self):

        localctx = Interlis24Parser.ModelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_model)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(Interlis24Parser.MODEL)
            self.state = 103
            self.match(Interlis24Parser.ID)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 104
                self.languageSpec()


            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 107
                self.modelHeader()


            self.state = 110
            self.match(Interlis24Parser.EQUALS)
            self.state = 111
            self.modelBody()
            self.state = 112
            self.match(Interlis24Parser.END)
            self.state = 113
            self.match(Interlis24Parser.ID)
            self.state = 114
            self.match(Interlis24Parser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LanguageSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(Interlis24Parser.LPAREN, 0)

        def ID(self):
            return self.getToken(Interlis24Parser.ID, 0)

        def RPAREN(self):
            return self.getToken(Interlis24Parser.RPAREN, 0)

        def getRuleIndex(self):
            return Interlis24Parser.RULE_languageSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLanguageSpec" ):
                listener.enterLanguageSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLanguageSpec" ):
                listener.exitLanguageSpec(self)




    def languageSpec(self):

        localctx = Interlis24Parser.LanguageSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_languageSpec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(Interlis24Parser.LPAREN)
            self.state = 117
            self.match(Interlis24Parser.ID)
            self.state = 118
            self.match(Interlis24Parser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelHeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AT(self):
            return self.getToken(Interlis24Parser.AT, 0)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(Interlis24Parser.STRING)
            else:
                return self.getToken(Interlis24Parser.STRING, i)

        def VERSION(self):
            return self.getToken(Interlis24Parser.VERSION, 0)

        def getRuleIndex(self):
            return Interlis24Parser.RULE_modelHeader

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelHeader" ):
                listener.enterModelHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelHeader" ):
                listener.exitModelHeader(self)




    def modelHeader(self):

        localctx = Interlis24Parser.ModelHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_modelHeader)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 120
                self.match(Interlis24Parser.AT)
                self.state = 121
                self.match(Interlis24Parser.STRING)


            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 124
                self.match(Interlis24Parser.VERSION)
                self.state = 125
                self.match(Interlis24Parser.STRING)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Interlis24Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Interlis24Parser.StatementContext,i)


        def getRuleIndex(self):
            return Interlis24Parser.RULE_modelBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelBody" ):
                listener.enterModelBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelBody" ):
                listener.exitModelBody(self)




    def modelBody(self):

        localctx = Interlis24Parser.ModelBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_modelBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8408056) != 0):
                self.state = 128
                self.statement()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def topic(self):
            return self.getTypedRuleContext(Interlis24Parser.TopicContext,0)


        def classDef(self):
            return self.getTypedRuleContext(Interlis24Parser.ClassDefContext,0)


        def structureDef(self):
            return self.getTypedRuleContext(Interlis24Parser.StructureDefContext,0)


        def associationDef(self):
            return self.getTypedRuleContext(Interlis24Parser.AssociationDefContext,0)


        def domainSection(self):
            return self.getTypedRuleContext(Interlis24Parser.DomainSectionContext,0)


        def functionDef(self):
            return self.getTypedRuleContext(Interlis24Parser.FunctionDefContext,0)


        def constraintDef(self):
            return self.getTypedRuleContext(Interlis24Parser.ConstraintDefContext,0)


        def importsStmt(self):
            return self.getTypedRuleContext(Interlis24Parser.ImportsStmtContext,0)


        def SEMICOLON(self):
            return self.getToken(Interlis24Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return Interlis24Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = Interlis24Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.topic()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.classDef()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 136
                self.structureDef()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 4)
                self.state = 137
                self.associationDef()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 5)
                self.state = 138
                self.domainSection()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 6)
                self.state = 139
                self.functionDef()
                pass
            elif token in [8, 9]:
                self.enterOuterAlt(localctx, 7)
                self.state = 140
                self.constraintDef()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 8)
                self.state = 141
                self.importsStmt()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 9)
                self.state = 142
                self.match(Interlis24Parser.SEMICOLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopicContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOPIC(self):
            return self.getToken(Interlis24Parser.TOPIC, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(Interlis24Parser.ID)
            else:
                return self.getToken(Interlis24Parser.ID, i)

        def EQUALS(self):
            return self.getToken(Interlis24Parser.EQUALS, 0)

        def topicBody(self):
            return self.getTypedRuleContext(Interlis24Parser.TopicBodyContext,0)


        def END(self):
            return self.getToken(Interlis24Parser.END, 0)

        def SEMICOLON(self):
            return self.getToken(Interlis24Parser.SEMICOLON, 0)

        def modelHeader(self):
            return self.getTypedRuleContext(Interlis24Parser.ModelHeaderContext,0)


        def getRuleIndex(self):
            return Interlis24Parser.RULE_topic

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopic" ):
                listener.enterTopic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopic" ):
                listener.exitTopic(self)




    def topic(self):

        localctx = Interlis24Parser.TopicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_topic)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(Interlis24Parser.TOPIC)
            self.state = 146
            self.match(Interlis24Parser.ID)
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 147
                self.modelHeader()


            self.state = 150
            self.match(Interlis24Parser.EQUALS)
            self.state = 151
            self.topicBody()
            self.state = 152
            self.match(Interlis24Parser.END)
            self.state = 153
            self.match(Interlis24Parser.ID)
            self.state = 154
            self.match(Interlis24Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopicBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def topicStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Interlis24Parser.TopicStatementContext)
            else:
                return self.getTypedRuleContext(Interlis24Parser.TopicStatementContext,i)


        def getRuleIndex(self):
            return Interlis24Parser.RULE_topicBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopicBody" ):
                listener.enterTopicBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopicBody" ):
                listener.exitTopicBody(self)




    def topicBody(self):

        localctx = Interlis24Parser.TopicBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_topicBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8471536) != 0):
                self.state = 156
                self.topicStatement()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopicStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDef(self):
            return self.getTypedRuleContext(Interlis24Parser.ClassDefContext,0)


        def structureDef(self):
            return self.getTypedRuleContext(Interlis24Parser.StructureDefContext,0)


        def associationDef(self):
            return self.getTypedRuleContext(Interlis24Parser.AssociationDefContext,0)


        def domainSection(self):
            return self.getTypedRuleContext(Interlis24Parser.DomainSectionContext,0)


        def functionDef(self):
            return self.getTypedRuleContext(Interlis24Parser.FunctionDefContext,0)


        def constraintDef(self):
            return self.getTypedRuleContext(Interlis24Parser.ConstraintDefContext,0)


        def dependsStmt(self):
            return self.getTypedRuleContext(Interlis24Parser.DependsStmtContext,0)


        def SEMICOLON(self):
            return self.getToken(Interlis24Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return Interlis24Parser.RULE_topicStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopicStatement" ):
                listener.enterTopicStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopicStatement" ):
                listener.exitTopicStatement(self)




    def topicStatement(self):

        localctx = Interlis24Parser.TopicStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_topicStatement)
        try:
            self.state = 170
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.classDef()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.structureDef()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 3)
                self.state = 164
                self.associationDef()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 165
                self.domainSection()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 5)
                self.state = 166
                self.functionDef()
                pass
            elif token in [8, 9]:
                self.enterOuterAlt(localctx, 6)
                self.state = 167
                self.constraintDef()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 7)
                self.state = 168
                self.dependsStmt()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 8)
                self.state = 169
                self.match(Interlis24Parser.SEMICOLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportsStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORTS(self):
            return self.getToken(Interlis24Parser.IMPORTS, 0)

        def qualifiedName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Interlis24Parser.QualifiedNameContext)
            else:
                return self.getTypedRuleContext(Interlis24Parser.QualifiedNameContext,i)


        def SEMICOLON(self):
            return self.getToken(Interlis24Parser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(Interlis24Parser.COMMA)
            else:
                return self.getToken(Interlis24Parser.COMMA, i)

        def getRuleIndex(self):
            return Interlis24Parser.RULE_importsStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportsStmt" ):
                listener.enterImportsStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportsStmt" ):
                listener.exitImportsStmt(self)




    def importsStmt(self):

        localctx = Interlis24Parser.ImportsStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_importsStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(Interlis24Parser.IMPORTS)
            self.state = 173
            self.qualifiedName()
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==28:
                self.state = 174
                self.match(Interlis24Parser.COMMA)
                self.state = 175
                self.qualifiedName()
                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 181
            self.match(Interlis24Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DomainSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOMAIN(self):
            return self.getToken(Interlis24Parser.DOMAIN, 0)

        def domainStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Interlis24Parser.DomainStatementContext)
            else:
                return self.getTypedRuleContext(Interlis24Parser.DomainStatementContext,i)


        def getRuleIndex(self):
            return Interlis24Parser.RULE_domainSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomainSection" ):
                listener.enterDomainSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomainSection" ):
                listener.exitDomainSection(self)




    def domainSection(self):

        localctx = Interlis24Parser.DomainSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_domainSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.match(Interlis24Parser.DOMAIN)
            self.state = 185 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 184
                self.domainStatement()
                self.state = 187 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==39):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DomainStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(Interlis24Parser.ID, 0)

        def EQUALS(self):
            return self.getToken(Interlis24Parser.EQUALS, 0)

        def domainType(self):
            return self.getTypedRuleContext(Interlis24Parser.DomainTypeContext,0)


        def SEMICOLON(self):
            return self.getToken(Interlis24Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return Interlis24Parser.RULE_domainStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomainStatement" ):
                listener.enterDomainStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomainStatement" ):
                listener.exitDomainStatement(self)




    def domainStatement(self):
